fix spacings

--- a/src/assets/css/Contact.css
+++ b/src/assets/css/Contact.css
@@ -1,23 +1,24 @@
 .Contact {
     width: 100%;
     margin-top: 80vh;
-    margin-bottom: 10vh;
+    margin-bottom: 5%;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
     align-content: center;
+    flex-wrap: wrap;
 }
 
 .FindMe {
     font-family: var(--montserrat);
-    font-size: 2em;
+    font-size: 1.5em;
     color: var(--accent-secondary);
     background-image: linear-gradient(to right, #43e2cf #8e9ffa);
 
     text-decoration: none;
 
-    width: 10%;
+    width: 100px;
     aspect-ratio: 1/1;
     border-radius: 50%;
 
