--- a/src/assets/css/Projects.css
+++ b/src/assets/css/Projects.css
@@ -3,6 +3,7 @@
     width: 95vw;
     margin-top: 95%;
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
     justify-content: center;
     align-items: center;
